k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musclecode-backend-main-service
  annotations:
    devostack.com/image-sha: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musclecode-backend-main-service
  template:
    metadata:
      labels:
        app: musclecode-backend-main-service
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: musclecode-backend-main-service
          image: harbor.devostack.com/musclecode/musclecode-backend-main-service:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
