k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musclecode-backend-main-service
  namespace: musclecode
spec:
  selector:
    app: musclecode-backend-main-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
