k8s/base/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-musclecode-backend-main-service-virtualservice
  namespace: musclecode
spec:
  hosts:
  - "api.musclecode.io"
  gateways:
  - istio-system/istio-https-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: musclecode-backend-main-service
    retries:
      attempts: 3
      perTryTimeout: 3600s
    timeout: 3600s
